--- a/style.css
+++ b/style.css
@@ -11,12 +11,21 @@ html {
 
 #message-window {
 	overflow-y: auto;
+	width: 98%;
 	height: 99%;
+}
+
+#message-window > span{
+	color:#9e9e9e;
+}
+
+#input-container {
+	position: fixed;
+	bottom: 0;
 }
 
 .input-list{
 	display: flex;
-	bottom: 0;
 }
 
 #content_input {
